# kixmail

./: .gitignore  AUTHORS  HACKING  INSTALL  Makefile.am  Makefile.shared  README  autogen.sh  configure.ac
libkix/: Makefile.am  kixmail-debug.c  kixmail-debug.h  kixmail-filter-input-stream.c  kixmail-filter-input-stream.h  kixmail-gsettings.h  kixmail-io-stream.c  kixmail-io-stream.h  kixmail-io.c  kixmail-io.h  kixmail-ip.c  kixmail-ip.h  kixmail-socket.c  kixmail-socket.h  kixmail-utils.c  kixmail-utils.h
libkix-gtk/: Makefile.am  kixmail-initial-setup-widget.c  kixmail-initial-setup-widget.h  kixmail-ui-utils.c  kixmail-ui-utils.h
m4/: kixmail-args.m4  kixmail-valgrind.m4
src/: Makefile.am  kixmail-application.c  kixmail-application.h  kixmail-folder-sidebar.c  kixmail-folder-sidebar.h  kixmail-main.c  kixmail-window.c  kixmail-window.h  kixmail.1  kixmail.c  kixmail.h  main.c
tests/: .gitignore  Makefile.am  kixmail-network-connect-test.c  kixmail-network-connect-test.h
